--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -51,6 +51,8 @@
 		"jest-puppeteer": "^4.3.0",
 		"js-yaml": "^3.13.1",
 		"lodash": "^4.17.15",
+		"markdownlint": "^0.18.0",
+		"markdownlint-cli": "^0.21.0",
 		"minimist": "^1.2.0",
 		"npm-package-json-lint": "^4.0.3",
 		"puppeteer": "^2.0.0",
